--- a/index.html
+++ b/index.html
@@ -1,2 +1,17 @@
 <h1>Hello!</h1>
 <h3>Please select which player you are:</h3>
+<style>
+  .button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+</style>
+
+<script type="text/javascript">
+</script>
