--- a/index.html
+++ b/index.html
@@ -1,17 +1,39 @@
-<h1>Hello!</h1>
-<h3>Please select which player you are:</h3>
+<!DOCTYPE html>
+<html>
+<head>
 <style>
-  .button {
+.btn-group .button {
   background-color: #4CAF50; /* Green */
-  border: none;
+  border: 1px solid green;
   color: white;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
   font-size: 16px;
+  cursor: pointer;
+  width: 150px;
+  display: block;
+}
+
+.btn-group .button:not(:last-child) {
+  border-bottom: none; /* Prevent double borders */
+}
+
+.btn-group .button:hover {
+  background-color: #3e8e41;
 }
 </style>
+</head>
+<body>
 
-<script type="text/javascript">
-</script>
+<h2>Hello!</h2>
+
+<div class="btn-group">
+  <button class="button">Button</button>
+  <button class="button">Button</button>
+  <button class="button">Button</button>
+  <button class="button">Button</button>
+</div>
+
+</body>
+</html>
