added several buttons

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <style>
-.btn-group .button {
+.button {
   background-color: #4CAF50; /* Green */
   border: 1px solid green;
   color: white;
@@ -15,24 +15,27 @@
   display: block;
 }
 
-.btn-group .button:not(:last-child) {
+.button:not(:last-child) {
   border-bottom: none; /* Prevent double borders */
 }
 
-.btn-group .button:hover {
+.button:hover {
   background-color: #3e8e41;
 }
 </style>
 </head>
 <body>
 
-<h2>Hello!</h2>
+<h2>Vertical Button Group</h2>
 
 <div class="btn-group">
-  <button class="button">Button</button>
-  <button class="button">Button</button>
-  <button class="button">Button</button>
-  <button class="button">Button</button>
+  <button class="button">player 1</button>
+  <button class="button">player 2</button>
+  <button class="button">player 3</button>
+  <button class="button">player 4</button>
+  <button class="button">player 5</button>
+  <button class="button">player 6</button>
+  <button class="button">player 7</button>
 </div>
 
 </body>
