Updated title and basic instructions

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 </head>
 <body>
 
-<h2>Vertical Button Group</h2>
+<h2>Hello!</h2>
+<h3>Please select which player you are.</h3>
 
 <div class="btn-group">
   <button class="button">player 1</button>
