changed button colors

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 .button {
-  background-color: #4CAF50; /* Green */
+  background-color: #fff694; /* Green */
   border: 1px solid green;
   color: white;
   padding: 15px 32px;
@@ -20,7 +20,7 @@
 }
 
 .button:hover {
-  background-color: #3e8e41;
+  background-color: #e3da74;
 }
 </style>
 </head>
