--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <style>
+    /*
     .button {
-      background-color: #4CAF50; /* Green */
+      background-color: #4CAF50; 
       border: 1px solid green;
       color: white;
       padding: 15px 32px;
@@ -16,12 +17,14 @@
     }
 
     .button:not(:last-child) {
-      border-bottom: none; /* Prevent double borders */
+      border-bottom: none;
     }
 
     .button:hover {
       background-color: #3e8e41;
     }
+
+    */
     </style>
   </head>
 <body>
@@ -29,13 +32,13 @@
 <h2>Hello!</h2>
 <h3>Please select which player you are.</h3>
 
-<button class="button">player 1</button>
-<button class="button">player 2</button>
-<button class="button">player 3</button>
-<button class="button">player 4</button>
-<button class="button">player 5</button>
-<button class="button">player 6</button>
-<button class="button">player 7</button>
+<button onclick="myFunction()">player 1</button>
+<button onclick="myFunction()">player 2</button>
+<button onclick="myFunction()">player 3</button>
+<button onclick="myFunction()">player 4</button>
+<button onclick="myFunction()">player 5</button>
+<button onclick="myFunction()">player 6</button>
+<button onclick="myFunction()">player 7</button>
 
 </body>
 </html>
