added a text section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
 <body>
 
 <h2>Hello!</h2>
+
+<h3>What's something about UCSC you really like?</h3>
+<textarea rows="4" cols="50"></textarea>
+
+<h3>What's something about UCSC you really don't like?</h3>
+<textarea rows="4" cols="50"></textarea>
+
 <p id="demo"></p>
+
 <h3>Please select which player you are.</h3>
 
 <button onclick="myFunction(1)">player 1</button>
